envoy/envoy.yml
static_resources:
  listeners:
    # Web
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8801
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: web
                route_config:
                  virtual_hosts:
                    - name: web
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: web }
                http_filters:
                  - name: envoy.router
    # Notification server
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 22280
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                upgrade_configs:
                  - upgrade_type: websocket
                codec_type: auto
                stat_prefix: noty
                route_config:
                  virtual_hosts:
                    - name: noty
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: noty }
                http_filters:
                  - name: envoy.router
    # Git SSH transport
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 2201
      filter_chains:
        - filters:
            - name: envoy.tcp_proxy
              config:
                stat_prefix: ssh
                cluster: ssh
  clusters:
    - name: web
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      hosts:
        - socket_address:
            address: nginx
            port_value: 80
    - name: noty
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      hosts:
        - socket_address:
            address: noty
            port_value: 22280
    - name: ssh
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      hosts:
        - socket_address:
            address: sshd
            port_value: 2201
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
